--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5001
-MONGO_URI=mongodb+srv://darshil:darshil0000@cluster0.sd4aw5e.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://sc6259680_db_user:pdgvqjWvvXxLwOLP@cluster0.itunlf7.mongodb.net/?appName=Cluster0
 JWT_SECRET=hostelite_secret_key
